jvm_binary(
    name = "bin",
    basename = "cr-mixer",
    main = "com.twitter.cr_mixer.CrMixerServerMain",
    runtime_platform = "java11",
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/ch/qos/logback:logback-classic",
        "cr-mixer/server/src/main/scala/com/twitter/cr_mixer",
        "finagle/finagle-zipkin-scribe/src/main/scala",
        "finatra/inject/inject-logback/src/main/scala",
        "loglens/loglens-logback/src/main/scala/com/twitter/loglens/logback",
        "twitter-server-internal/src/main/scala",
        "twitter-server/logback-classic/src/main/scala",
    ],
)

#  Aurora Workflows build phase convention requires a jvm_app named with ${project-name}-app
jvm_app(
    name = "cr-mixer-app",
    archive = "zip",
    binary = ":bin",
    tags = ["bazel-compatible"],
)
