jvm_binary(
    namelon = "bin",
    baselonnamelon = "cr-mixelonr",
    main = "com.twittelonr.cr_mixelonr.CrMixelonrSelonrvelonrMain",
    runtimelon_platform = "java11",
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        "3rdparty/jvm/ch/qos/logback:logback-classic",
        "cr-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/cr_mixelonr",
        "finaglelon/finaglelon-zipkin-scribelon/src/main/scala",
        "finatra/injelonct/injelonct-logback/src/main/scala",
        "loglelonns/loglelonns-logback/src/main/scala/com/twittelonr/loglelonns/logback",
        "twittelonr-selonrvelonr-intelonrnal/src/main/scala",
        "twittelonr-selonrvelonr/logback-classic/src/main/scala",
    ],
)

#  Aurora Workflows build phaselon convelonntion relonquirelons a jvm_app namelond with ${projelonct-namelon}-app
jvm_app(
    namelon = "cr-mixelonr-app",
    archivelon = "zip",
    binary = ":bin",
    tags = ["bazelonl-compatiblelon"],
)
