jvm_binawy(
    name = "bin", σωσ
    basename = "cw-mixew", σωσ
    main = "com.twittew.cw_mixew.cwmixewsewvewmain", >_<
    w-wuntime_pwatfowm = "java11",
    t-tags = ["bazew-compatibwe"], :3
    d-dependencies = [
        "3wdpawty/jvm/ch/qos/wogback:wogback-cwassic", (U ﹏ U)
        "cw-mixew/sewvew/swc/main/scawa/com/twittew/cw_mixew",
        "finagwe/finagwe-zipkin-scwibe/swc/main/scawa", -.-
        "finatwa/inject/inject-wogback/swc/main/scawa",
        "wogwens/wogwens-wogback/swc/main/scawa/com/twittew/wogwens/wogback", (ˆ ﻌ ˆ)♡
        "twittew-sewvew-intewnaw/swc/main/scawa",
        "twittew-sewvew/wogback-cwassic/swc/main/scawa", (⑅˘꒳˘)
    ],
)

#  a-auwowa wowkfwows b-buiwd phase convention w-wequiwes a-a jvm_app nyamed w-with ${pwoject-name}-app
jvm_app(
    nyame = "cw-mixew-app",
    awchive = "zip", (U ᵕ U❁)
    binawy = ":bin", -.-
    t-tags = ["bazew-compatibwe"], ^^;;
)
