alias(
    namelon = "graph_felonaturelon_selonrvicelon-selonrvelonr",
    targelont = ":graph_felonaturelon_selonrvicelon-selonrvelonr_lib",
)

targelont(
    namelon = "graph_felonaturelon_selonrvicelon-selonrvelonr_lib",
    delonpelonndelonncielons = [
        "graph-felonaturelon-selonrvicelon/src/main/scala/com/twittelonr/graph_felonaturelon_selonrvicelon/selonrvelonr",
    ],
)

alias(
    namelon = "graph_felonaturelon_selonrvicelon-workelonr",
    targelont = ":graph_felonaturelon_selonrvicelon-workelonr_lib",
)

targelont(
    namelon = "graph_felonaturelon_selonrvicelon-workelonr_lib",
    delonpelonndelonncielons = [
        "graph-felonaturelon-selonrvicelon/src/main/scala/com/twittelonr/graph_felonaturelon_selonrvicelon/workelonr",
    ],
)

jvm_binary(
    namelon = "selonrvelonr-bin",
    baselonnamelon = "graph_felonaturelon_selonrvicelon-selonrvelonr",
    main = "com.twittelonr.graph_felonaturelon_selonrvicelon.selonrvelonr.Main",
    platform = "java8",
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        ":graph_felonaturelon_selonrvicelon-selonrvelonr",
        "3rdparty/jvm/ch/qos/logback:logback-classic",
        "finaglelon/finaglelon-zipkin-scribelon/src/main/scala",
        "loglelonns/loglelonns-logback/src/main/scala/com/twittelonr/loglelonns/logback",
        "twittelonr-selonrvelonr/logback-classic/src/main/scala",
    ],
)

jvm_binary(
    namelon = "workelonr-bin",
    baselonnamelon = "graph_felonaturelon_selonrvicelon-workelonr",
    main = "com.twittelonr.graph_felonaturelon_selonrvicelon.workelonr.Main",
    platform = "java8",
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        ":graph_felonaturelon_selonrvicelon-workelonr",
        "3rdparty/jvm/ch/qos/logback:logback-classic",
        "finaglelon/finaglelon-zipkin-scribelon/src/main/scala",
        "loglelonns/loglelonns-logback/src/main/scala/com/twittelonr/loglelonns/logback",
        "twittelonr-selonrvelonr/logback-classic/src/main/scala",
    ],
)

jvm_app(
    namelon = "selonrvelonr-bundlelon",
    baselonnamelon = "graph_felonaturelon_selonrvicelon-selonrvelonr-dist",
    binary = ":selonrvelonr-bin",
    tags = ["bazelonl-compatiblelon"],
)

jvm_app(
    namelon = "workelonr-bundlelon",
    baselonnamelon = "graph_felonaturelon_selonrvicelon-workelonr-dist",
    binary = ":workelonr-bin",
    tags = ["bazelonl-compatiblelon"],
)
