jvm_binary(
    namelon = "bin",
    baselonnamelon = "homelon-mixelonr",
    main = "com.twittelonr.homelon_mixelonr.HomelonMixelonrSelonrvelonrMain",
    runtimelon_platform = "java11",
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        "3rdparty/jvm/ch/qos/logback:logback-classic",
        "finaglelon/finaglelon-zipkin-scribelon/src/main/scala",
        "finatra/injelonct/injelonct-logback/src/main/scala",
        "homelon-mixelonr/selonrvelonr/src/main/scala/com/twittelonr/homelon_mixelonr",
        "loglelonns/loglelonns-logback/src/main/scala/com/twittelonr/loglelonns/logback",
        "twittelonr-selonrvelonr-intelonrnal/src/main/scala",
        "twittelonr-selonrvelonr/logback-classic/src/main/scala",
    ],
)

#  Aurora Workflows build phaselon convelonntion relonquirelons a jvm_app namelond with homelon-mixelonr-app
jvm_app(
    namelon = "homelon-mixelonr-app",
    archivelon = "zip",
    binary = ":bin",
    bundlelons = [
        bundlelon(
            filelonselont = ["config/**/*"],
            owning_targelont = "homelon-mixelonr/config:filelons",
        ),
    ],
    tags = ["bazelonl-compatiblelon"],
)
