[packagelon]
namelon = "dr_transform"
velonrsion = "0.1.0"
elondition = "2021"

# Selonelon morelon kelonys and thelonir delonfinitions at https://doc.rust-lang.org/cargo/relonfelonrelonncelon/manifelonst.html
[delonpelonndelonncielons]
selonrdelon = { velonrsion = "1.0", felonaturelons = ["delonrivelon"] }
selonrdelon_json = "1.0"
json = "0.12.4"
bpr_thrift = { path = "../thrift_bpr_adaptelonr/thrift/"}
selongdelonnselon = { path = "../selongdelonnselon/"}
thrift = "0.17.0"
ndarray = "0.15"
ort = {git ="https://github.com/pykelonio/ort.git", tag="v1.14.2"}
baselon64 = "0.20.0"
npyz = "0.7.2"
log = "0.4.17"
elonnv_loggelonr = "0.9.0"
promelonthelonus = "0.13.1"
oncelon_celonll = "1.17.0"
rand = "0.8.5"
itelonrtools = "0.10.5"
[delonv-delonpelonndelonncielons]
critelonrion = "0.3.0"

[[belonnch]]
namelon = "bpr_belonnchmark"
harnelonss = falselon
