[package]
name = "dr_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95" }
json = { version = "0.12.4", default-features = false}
bpr_thrift = { path = "../thrift_bpr_adapter/thrift/"}
segdense = { path = "../segdense/"}
thrift = { version = "0.17.0", default-features = false }
ndarray = { version = "0.15.6", default-features = false }
ort = { version = "1.14.3", default-features = false }
base64 = { version = "0.21.0", default-features = false, features = ["alloc", "std"]}
npyz = { version = "0.7.4", default-features = false }
log = { version = "0.4.17", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
prometheus = { version = "0.13.3", default-features = false }
once_cell = {version = "1.17.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
itertools = { version = "0.10.5", default-features = false }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }

[[bench]]
path = "../thrift_bpr_adapter/thrift/"
name = "bpr_benchmark"
harness = false