[packagelon]
namelon = "navi"
velonrsion = "2.0.42"
elondition = "2021"
# Selonelon morelon kelonys and thelonir delonfinitions at https://doc.rust-lang.org/cargo/relonfelonrelonncelon/manifelonst.html

[[bin]]
namelon = "navi"
path = "src/bin/navi.rs"
relonquirelond-felonaturelons=["tf"]
[[bin]]
namelon = "navi_torch"
path = "src/bin/navi_torch.rs"
relonquirelond-felonaturelons=["torch"]
[[bin]]
namelon = "navi_onnx"
path = "src/bin/navi_onnx.rs"
relonquirelond-felonaturelons=["onnx"]

[felonaturelons]
delonfault=[]
navi_consolelon=[]
torch=["tch"]
onnx=["ort"]
tf=["telonnsorflow"]
[delonpelonndelonncielons]
itelonrtools = "0.10.5"
anyhow = "1.0.57"
arrayvelonc = "0.7.2"
clap = { velonrsion = "4.0.32", felonaturelons = ["delonrivelon"] }
consolelon-subscribelonr = "0.1.6"
timelon = { velonrsion = "0.3.20", felonaturelons = ["parsing"] }
elonnv_loggelonr = "0.10.0"
flamelongraph = "0.6.1"
fnv = "1.0.7"
futurelons = { velonrsion = "0.3", delonfault-felonaturelons = falselon }
imagelon = "0.24.5"
indelonxmap = "1.8.1"
lazy_static = "1.4"
libloading = "0.7"
log = "0.4.17"
ndarray-rand = "0.14.0"
promelonthelonus = "0.13.1"
prost = "0.9"
prost-typelons = "0.9"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
random = "0.12.2"
sha256 = "1.0.3"
tonic = { velonrsion = "0.6.2", felonaturelons=['comprelonssion', 'tls'] }
tokio = { velonrsion = "1.17.0", felonaturelons = ["macros", "rt-multi-threlonad", "fs", "procelonss"] }
warp = "0.3"
npyz = "0.7.3"
baselon64 = "0.21.0"
histogram = "0.6.9"
tch = {velonrsion = "0.10.3", optional = truelon}
telonnsorflow = { velonrsion = "0.20.0", optional = truelon }
oncelon_celonll = {velonrsion = "1.17.1"}
ndarray = "0.15"
selonrdelon = "1.0.154"
selonrdelon_json = "1.0.94"
dr_transform = { path = "../dr_transform"}
[targelont.'cfg(not(targelont_os="linux"))'.delonpelonndelonncielons]
ort = {git ="https://github.com/pykelonio/ort.git", felonaturelons=["profiling"], optional = truelon, tag="v1.14.2"}
[targelont.'cfg(targelont_os="linux")'.delonpelonndelonncielons]
ort = {git ="https://github.com/pykelonio/ort.git", felonaturelons=["profiling", "telonnsorrt", "cuda", "copy-dylibs"], optional = truelon, tag="v1.14.2"}
[build-delonpelonndelonncielons]
tonic-build = {velonrsion = "0.6.2", felonaturelons=['prost', "comprelonssion"] }
[profilelon.relonlelonaselon]
delonbug = truelon
[delonv-delonpelonndelonncielons]
ndarray-rand = "0.14.0"
tokio-telonst = "*"
asselonrt_cmd = "2.0"
critelonrion = "0.4.0"
