[package]
name = "navi"
version = "2.0.42"
edition = "2021"

[profile.release]
debug = true

[[bin]]
name = "navi"
path = "src/bin/navi.rs"
required-features = ["tf"]

[[bin]]
name = "navi_torch"
path = "src/bin/navi_torch.rs"
required-features = ["torch"]

[[bin]]
name = "navi_onnx"
path = "src/bin/navi_onnx.rs"
required-features = ["onnx"]

[features]
default = [ ]
navi_console = [ ]
torch = ["tch"]
onnx = ["ort"]
tf = ["tensorflow"]

[dependencies]
itertools = { version = "0.10.5", default-features = false, features = ["use_alloc"] }
anyhow = { version = "1.0.7", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
console-subscriber = { version = "0.1.8", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
flamegraph = { version = "0.6.2", default-features = false }
fnv = { version = "1.0.7", default-features = false }
image = { version = "0.24.6", default-features = false }
indexmap = { version = "1.8.1", default-features = false }
lazy_static = { version = "1.4", default-features = false }
libloading = { version = "0.7.4", default-features = false }
log = { version = "0.4.17", default-features = false }
ndarray-rand = { version = "0.14.0", default-features = false }
prometheus = { version = "0.13.3", default-features = false }
prost = { version = "0.9", default-features = false }
prost-types = { version = "0.9", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_pcg = { version = "0.3.1", default-features = false }
random = { version = "0.13.2", default-features = false }
sha256 = { version = "1.1.2", default-features = false }
warp = { version = "0.3.4", default-features = false }
npyz = { version = "0.7.4", default-features = false }
base64 = { version = "0.21.0", default-features = false }
histogram = { version = "0.7.2", default-features = false }
ndarray = { version = "0.15.6", default-features = false }
serde = { version = "1.0.159", default-features = false }
serde_json = { version = "1.0.95", default-features = false }

[dependencies.clap]
version = "4.2.1"
default-features = false 
features = ["derive", "std"]

[dependencies.time]
version = "0.3.20"
default-features = false 
features = ["parsing"]

[dependencies.futures]
version = "0.3.28"
default-features = false

[dependencies.tonic]
version = "0.6.2"
default-features = false
features = ["compression", "tls", "codegen", "prost"]

[dependencies.tokio]
version = "1.27.0"
default-features = false 
features = ["macros", "rt-multi-thread", "fs", "process"]

[dependencies.tch]
version = "0.11.0"
default-features = false 
optional = true

[dependencies.tensorflow]
version = "0.20.0"
default-features = false 
optional = true

[dependencies.once_cell]
default-features = false 
version = "1.17.1"

[dependencies.dr_transform]
path = "../dr_transform"

[target."cfg(not(target_os=\"linux\"))".dependencies.ort]
version = "1.14.3"
default-features = false 
features = ["profiling"]
optional = true

[target."cfg(target_os=\"linux\")".dependencies.ort]
version = "1.14.3"
default-features = false 
features = ["profiling", "tensorrt", "cuda", "copy-dylibs"]
optional = true

[build-dependencies.tonic-build]
version = "0.6.2"
default-features = false
features = ["prost", "compression", "prost-build", "transport"]

[dev-dependencies]
ndarray-rand = { version = "0.14.0", default-features = false }
tokio-test = { version = "0.4.2", default-features = false }
assert_cmd = { version = "2.0.1", default-features = false }
criterion = { version = "0.4.0", default-features = false }
