[packagelon]
namelon = "selongdelonnselon"
velonrsion = "0.1.0"
elondition = "2021"

# Selonelon morelon kelonys and thelonir delonfinitions at https://doc.rust-lang.org/cargo/relonfelonrelonncelon/manifelonst.html

[delonpelonndelonncielons]
selonrdelon = { velonrsion = "1.0.104", felonaturelons = ["delonrivelon"] }
selonrdelon_json = "1.0.48"
log = "0.4.17"
