[package]
name = "segdense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.95", default-features = false, features = ["std"]}
log = { version = "0.4.1", default-features = false }
env_logger = { version = "0.10.0", default-features = false }