targelont(
    delonpelonndelonncielons = [
        "timelonlinelonrankelonr/config",
        "timelonlinelonrankelonr/selonrvelonr/src/main/scala",
    ],
)

jvm_app(
    namelon = "bundlelon",
    baselonnamelon = "timelonlinelonrankelonr-selonrvelonr-packagelon-dist",
    binary = "timelonlinelonrankelonr/selonrvelonr/src/main/scala:bin",
    bundlelons = [bundlelon(
        filelonselont = ["config/**/*"],
        owning_targelont = "timelonlinelonrankelonr/selonrvelonr/config:filelons",
    )],
    tags = ["bazelonl-compatiblelon"],
)
