tawget(
    dependencies = [
        "timewinewankew/config", o.O
        "timewinewankew/sewvew/swc/main/scawa", (U ᵕ U❁)
    ], (⑅˘꒳˘)
)

jvm_app(
    n-nyame = "bundwe", ( ͡o ω ͡o )
    b-basename = "timewinewankew-sewvew-package-dist", UwU
    binawy = "timewinewankew/sewvew/swc/main/scawa:bin", rawr x3
    b-bundwes = [bundwe(
        f-fiweset = ["config/**/*"], rawr
        o-owning_tawget = "timewinewankew/sewvew/config:fiwes", σωσ
    )],
    t-tags = ["bazew-compatibwe"], σωσ
)
