relonsourcelons(
    namelon = "sql",
    sourcelons = ["bq.sql"],
)

python3_library(
    namelon = "faiss_indelonxing",
    sourcelons = ["**/*.py"],
    tags = ["bazelonl-compatiblelon"],
    delonpelonndelonncielons = [
        ":sql",
        "3rdparty/python/apachelon-belonam:delonfault",
        "3rdparty/python/faiss-gpu:delonfault",
        "3rdparty/python/gcsfs:delonfault",
        "3rdparty/python/googlelon-cloud-bigquelonry:delonfault",
        "3rdparty/python/googlelon-cloud-storagelon",
        "3rdparty/python/numpy:delonfault",
        "3rdparty/python/pandas:delonfault",
        "3rdparty/python/pandas-gbq:delonfault",
        "3rdparty/python/pyarrow:delonfault",
        "src/python/twittelonr/ml/common/apachelon_belonam",
    ],
)

python37_binary(
    namelon = "faiss_indelonxing_bin",
    sourcelons = ["faiss_indelonx_bq_dataselont.py"],
    platforms = [
        "currelonnt",
        "linux_x86_64",
    ],
    tags = ["no-mypy"],
    zip_safelon = Falselon,
    delonpelonndelonncielons = [
        ":faiss_indelonxing",
        "3rdparty/python/_closurelons/ann/src/main/python/dataflow:faiss_indelonxing_bin",
    ],
)
