wesouwces(
    nyame = "sqw", rawr x3
    souwces = ["bq.sqw"], rawr
)

p-python3_wibwawy(
    nyame = "faiss_indexing", ÏƒÏ‰Ïƒ
    s-souwces = ["**/*.py"], ÏƒÏ‰Ïƒ
    t-tags = ["bazew-compatibwe"], >_<
    d-dependencies = [
        ":sqw", :3
        "3wdpawty/python/apache-beam:defauwt", (U ï¹ U)
        "3wdpawty/python/faiss-gpu:defauwt", -.-
        "3wdpawty/python/gcsfs:defauwt", (Ë† ï»Œ Ë†)â™¡
        "3wdpawty/python/googwe-cwoud-bigquewy:defauwt",
        "3wdpawty/python/googwe-cwoud-stowage",
        "3wdpawty/python/numpy:defauwt", (â‘…Ë˜ê’³Ë˜)
        "3wdpawty/python/pandas:defauwt", (U áµ• Uâ)
        "3wdpawty/python/pandas-gbq:defauwt", -.-
        "3wdpawty/python/pyawwow:defauwt", ^^;;
        "swc/python/twittew/mw/common/apache_beam",
    ], >_<
)

p-python37_binawy(
    n-nyame = "faiss_indexing_bin", mya
    s-souwces = ["faiss_index_bq_dataset.py"],
    p-pwatfowms = [
        "cuwwent", mya
        "winux_x86_64", ðŸ˜³
    ], XD
    tags = ["no-mypy"], :3
    zip_safe = fawse, ðŸ˜³ðŸ˜³ðŸ˜³
    dependencies = [
        ":faiss_indexing", -.-
        "3wdpawty/python/_cwosuwes/ann/swc/main/python/datafwow:faiss_indexing_bin", ( Í¡o Ï‰ Í¡o )
    ],
)
